# real-time-code-collab-with-ai

./: README.md  back.sh  front.sh  package-lock.json  package.json  sample.ts
backend/: .gitignore  Cargo.toml
backend/src/: ai_review_service.py  main.rs
backend/src/Models/: project.rs  user.rs
backend/src/connection/: auth.rs  firebase.rs  realServiceAccountKey.json  real_time.rs  serviceAccountKey.json
backend/src/model/: files.rs  mod.rs  project.rs  user.rs
backend/src/routers/: ai_review.rs  files.rs  login.rs  mod.rs  project.rs  user.rs
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/context/: DataContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useApplyTheme.ts  useFileSocket.ts
frontend/src/pages/: About.tsx  Editor.tsx  Help.tsx  History.tsx  Home.tsx  HomePage.tsx  JoinRoom.tsx  Profile.tsx  SignIn.tsx  SignUp.tsx
frontend/src/redux/: store.ts
frontend/src/redux/Actions/: projectAction.ts  projectDetailsAction.ts
frontend/src/redux/Reducers/: projectDetailsReducer.ts  projectReducer.ts  rootReducer.ts
frontend/src/redux/Slices/: authSlice.ts  fileSlice.ts  projectSlice.ts  roomSlice.ts
src/: App.tsx  sample.tsx
src/pages/: History.tsx  Home.tsx  Profile.tsx  SignIn.tsx  SignUp.tsx
