[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Ajay Surya", "Sai Kumar"]

[dependencies]
axum = "0.8.3"
firebase-rs = "2.0.5"
tokio = {version="1", features = ["full"]}
tower  = "0.5.2"
serde = {version ="1.0", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = "1.16.0"